# simple_crypt

./: Cargo.toml  LICENSE  README.md  encrypted_example.txt
src/: lib.rs
