[package]
name = "simple_crypt"
version = "0.2.2"
authors = ["NiiightmareXD <https://github.com/NiiightmareXD"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A simple and high level library to encrypt and decrypt texts, files, folders and any data with it"
documentation = "https://docs.rs/simple_crypt"
repository = "https://github.com/NiiightmareXD/simple_crypt"
keywords = ["crypto", "encryption", "aes", "argon2", "cypher"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
serde = "1.0.143"
serde_derive = "1.0.143"
rust-argon2 = "1.0.0"
bincode = "1.3.3"
anyhow = "1.0.60"
log = "0.4.17"
tar = "0.4.38"
